# Haskellite

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  cabal.project.freeze  haskellite.cabal
.github/workflows/: ci.yml
app/: Main.hs
app/Haskellite/: Platform.hs  UI.hs
app/Haskellite/Platform/: Linux.hs  Mac.hs  Windows.hs
app/Haskellite/Tray/: Linux.hs  Mac.hs  Windows.hsc
docs/: ARCHITECTURE.md
packaging/: Info.plist  README.md  build-macos.sh  haskellite.desktop  macos.entitlements  windows.manifest
src/Haskellite/: Audio.hsc  Controller.hs  History.hs  Parakeet.hs  Runtime.hs  Types.hs  VAD.hs  Wav.hs
src/Haskellite/Internal/: DynamicLibrary.hs  Sherpa.hsc
test/: Main.hs
test/Haskellite/: HistorySpec.hs  RuntimeSpec.hs  SettingsSpec.hs  VADSpec.hs  WavSpec.hs
