cabal-version:      3.0
name:               haskellite
version:            0.1.0.0
synopsis:           Local Parakeet voice transcription for Linux and macOS
description:
  Haskellite is a Haskell desktop application for private, local voice-to-text
  transcription using NVIDIA Parakeet TDT through the sherpa-onnx C ABI.
homepage:            https://github.com/nearbycoder/Haskellite
license:             BSD-3-Clause
license-file:        LICENSE
author:              Haskellite contributors
maintainer:          Nearby Coder
category:            Desktop
build-type:          Simple
extra-doc-files:     README.md, CHANGELOG.md
data-files:
  assets/NotoSans-Regular.ttf
  assets/NotoSans-LICENSE.txt
  packaging/haskellite.desktop
extra-source-files:
  cabal.project
  cabal.project.freeze
  docs/ARCHITECTURE.md
  packaging/Info.plist
  packaging/README.md
  packaging/build-macos.sh
  packaging/haskellite.desktop
  packaging/macos.entitlements
  packaging/windows.manifest
  vendor/sherpa-onnx/include/sherpa-onnx/c-api/c-api.h

common warnings
  default-language: GHC2021
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wpartial-fields
    -Wredundant-constraints

library
  import: warnings
  hs-source-dirs: src
  pkgconfig-depends: sdl2 >=2.0.10
  exposed-modules:
    Haskellite.Audio
    Haskellite.Controller
    Haskellite.History
    Haskellite.Parakeet
    Haskellite.Runtime
    Haskellite.Types
    Haskellite.VAD
    Haskellite.Wav
  other-modules:
    Haskellite.Internal.DynamicLibrary
    Haskellite.Internal.Sherpa
  include-dirs: vendor/sherpa-onnx/include
  build-depends:
    aeson >=2.2 && <2.4,
    async >=2.2 && <2.4,
    base >=4.20 && <4.22,
    binary >=0.8 && <0.9,
    bzlib >=0.5 && <0.6,
    bytestring >=0.12 && <0.13,
    containers >=0.7 && <0.9,
    crypton >=1.0 && <1.2,
    directory >=1.3 && <1.4,
    filepath >=1.4 && <1.6,
    http-client >=0.7 && <0.9,
    http-client-tls >=0.3 && <0.5,
    sdl2 >=2.5 && <2.6,
    stm >=2.5 && <2.6,
    tar >=0.7 && <0.8,
    text >=2.1 && <2.2,
    time >=1.12 && <1.16,
    vector >=0.13 && <0.14
  if !os(windows)
    build-depends: unix >=2.8 && <2.9

executable haskellite
  import: warnings
  hs-source-dirs: app
  main-is: Main.hs
  other-modules:
    Haskellite.Platform
    Haskellite.UI
    Paths_haskellite
  autogen-modules:
    Paths_haskellite
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    async >=2.2 && <2.4,
    base >=4.20 && <4.22,
    containers >=0.7 && <0.9,
    dear-imgui >=2.4 && <2.5,
    directory >=1.3 && <1.4,
    filepath >=1.4 && <1.6,
    haskellite,
    managed >=1.0 && <1.1,
    optparse-applicative >=0.18 && <0.20,
    sdl2 >=2.5 && <2.6,
    stm >=2.5 && <2.6,
    text >=2.1 && <2.2,
    time >=1.12 && <1.16,
    vector >=0.13 && <0.14
  if os(windows)
    other-modules:
      Haskellite.Platform.Windows
      Haskellite.Tray.Windows
    extra-libraries: shell32, user32
  elif os(osx)
    other-modules:
      Haskellite.Platform.Mac
      Haskellite.Tray.Mac
    frameworks: ApplicationServices, Cocoa, CoreFoundation
  else
    other-modules:
      Haskellite.Platform.Linux
      Haskellite.Tray.Linux
    build-depends:
      X11 >=1.10 && <1.11,
      dbus >=1.3 && <1.5,
      unix >=2.8 && <2.9
    extra-libraries: Xtst

source-repository head
  type: git
  location: https://github.com/nearbycoder/Haskellite.git

test-suite haskellite-test
  import: warnings
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    Haskellite.HistorySpec
    Haskellite.RuntimeSpec
    Haskellite.SettingsSpec
    Haskellite.VADSpec
    Haskellite.WavSpec
  build-depends:
    aeson >=2.2 && <2.4,
    base >=4.20 && <4.22,
    bytestring >=0.12 && <0.13,
    directory >=1.3 && <1.4,
    filepath >=1.4 && <1.6,
    haskellite,
    tasty >=1.5 && <1.6,
    tasty-hunit >=0.10 && <0.11,
    temporary >=1.3 && <1.4,
    text >=2.1 && <2.2,
    vector >=0.13 && <0.14
